# Paperphone-plus

./: DEPLOY_CN.md  DEPLOY_EN.md  MEETING_DEPLOYMENT.md  README.md  README_DE.md  README_EN.md  README_ES.md  README_FR.md  README_JA.md  README_KO.md  README_RU.md  build-and-push.sh  build-and-push2.sh  docker-compose.yml  zeabur.yaml
client/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
client/public/: manifest.json  sw.js
client/src/: App.tsx  index.css  main.tsx
client/src/api/: http.ts  onesignal.ts  proxy-bridge.ts  push.ts
client/src/components/: CallOverlay.tsx  GroupCallOverlay.tsx  QRCode.tsx  TabBar.tsx  TgsPlayer.tsx
client/src/contexts/: CallContext.tsx  GroupCallContext.tsx
client/src/crypto/: groupCrypto.ts  keystore.ts  ratchet.ts
client/src/hooks/: useAutoDeleteCleanup.ts  useCall.ts  useGroupCall.ts  useSocket.ts
client/src/i18n/locales/: de.ts  en.ts  es.ts  fr.ts  ja.ts  ko.ts  ru.ts  zh.ts
client/src/pages/: Chat.tsx  Chats.tsx  Contacts.tsx  Discover.tsx  GroupInfo.tsx  Login.tsx  Moments.tsx  PrivacyPolicy.tsx  Profile.tsx  TermsOfUse.tsx  Timeline.tsx  UserProfile.tsx
client/src/store/: index.ts
client/src/utils/: notification.ts
deploy/nginx/: paperphone-plus.conf
server/: .env.example  .gitignore  Cargo.toml  Dockerfile
server/src/: config.rs  main.rs
server/src/db/: schema.sql
server/src/routes/: auth.rs  calls.rs  files.rs  friends.rs  groups.rs  messages.rs  mod.rs  moments.rs  push.rs  push_relay.rs  sessions.rs  stickers.rs  tags.rs  timeline.rs  totp.rs  upload.rs  users.rs
server/src/routes/admin/: html.rs  mod.rs
server/src/services/: apns.rs  fcm.rs  mod.rs  onesignal.rs  push.rs
server/src/ws/: server.rs
